Fix dark mode bg: duplicate full background properties

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -48,6 +48,11 @@ body {
 }
 html.dark body {
   background-image: url("/Learning-Blog/assets/images/Bg_Norway_dusk.jpg");
+  background-color: #1a1a2e;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 body::before {
   content: '';
